Builds and runs with JDK9